<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/oil_change_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oil_change_history"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"/>

    <LinearLayout
        android:id="@+id/layout_change_oil_engine_killometrage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:padding="50dp">

        <TextView
            android:id="@+id/text_killometrage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_killometrage"
            android:textColor="@color/black" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_change_oil_engine_inteval"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:padding="50dp">

            <TextView
                android:id="@+id/text_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_interval"
                />
        </LinearLayout>

</RelativeLayout>